--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^6.7.0",
     "intersection-observer": "^0.12.0",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
